# SEO_Pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  bootstrap_db.py  config.py  db.py  enums.py  logging.py  main.py
app/api/: audits.py  briefs.py  clustering.py  clusters.py  ingestion.py  internal_links.py  jobs.py  opportunity_briefs.py  opportunity_drafts.py  opportunity_evidence.py  opportunity_publications.py  opportunity_reviews.py  opportunity_revisions.py  projects.py  publisher_configs.py  refresh.py  scoring.py  workflow.py
app/connectors/: cms.py  crawler.py  ga4.py  gsc.py  gsc_csv.py  pagespeed.py  serp.py
app/llm/: __init__.py  cache.py  client.py  contracts.py  prompts.py  router.py  tasks.py
app/models/: __init__.py  artifact.py  brief.py  cluster.py  draft.py  internal_link_opportunity.py  issue.py  job.py  keyword.py  llm_call.py  metric.py  mixins.py  opportunity.py  opportunity_brief.py  opportunity_cluster.py  opportunity_draft.py  opportunity_evidence.py  opportunity_publication.py  opportunity_review.py  page.py  project.py  project_publisher_config.py  query_metric.py
app/scheduler/: cron.py
app/schemas/: brief.py  cluster.py  common.py  ingestion.py  internal_link_opportunity.py  issue.py  job.py  opportunity.py  opportunity_brief.py  opportunity_cluster.py  opportunity_draft.py  opportunity_evidence.py  opportunity_publication.py  opportunity_review.py  project.py  project_publisher_config.py  scoring.py
app/services/: decay.py  (+22 more)
frontend/: index.html  package-lock.json  package.json
migrations/: env.py
(+24 files in other folders)
