[project]
name = "seo-agent"
version = "0.1.0"
description = "Local-first SEO operations system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "orjson>=3.11.0",
  "pydantic>=2.9.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "python-multipart>=0.0.20",
  "redis>=6.4.0",
  "sqlalchemy>=2.0.40",
  "structlog>=25.4.0",
  "tenacity>=9.1.0",
  "uvicorn[standard]>=0.35.0",
  "aiosqlite>=0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
